# flask_and_jenkins

./: Dockerfile  main.py  pyproject.toml
.circleci/: config.yml
src/flask_and_jenkins/: calculation_functions.py
src/tests/: test_calculation_functions.py
