[tool.poetry]
name = "flask_and_jenkins"
version = "0.1.0"
description = ""
authors = ["Eryk854 <eryk658@wp.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
